--- a/style.css
+++ b/style.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+body {
+  font-family: "Roboto";
+}
+
 a {
   text-decoration: none;
 }
@@ -14,6 +18,21 @@ a {
 .sidebar {
   background-color: #7f55b1;
   grid-area: sidebar;
+  padding: 1.5rem;
+  padding-right: 5rem;
+}
+
+.links {
+  list-style-type: none;
+}
+
+i {
+  padding-right: 1rem;
+}
+
+.logo,
+.sidebar .links:first-of-type {
+  padding-bottom: 2rem;
 }
 
 .links li a,
@@ -21,34 +40,63 @@ a {
   color: #ffe1e0;
 }
 
+.logo a,
+.logo {
+  font-size: 30px;
+}
+
+.links li a {
+  font-size: 20px;
+}
+
+.links li {
+  padding-bottom: 1rem;
+}
+
 .header {
   grid-area: header;
   padding: 2.5rem;
-  padding-bottom: 0;
+  padding-bottom: 1rem;
+  background-color: #fff;
+  box-shadow: 0 4px 6px -2px rgba(0, 0, 0, 0.2);
+  z-index: 1;
 }
 
 .nav {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  padding-bottom: 1rem;
 }
 .menu {
   display: flex;
   justify-content: space-between;
   padding-top: 1rem;
+  align-items: center;
 }
 
 .menu-links {
   width: 30%;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  list-style-type: none;
+}
+
+.menu-links li a {
+  color: #fff;
+  padding: 0.5rem 1.5rem;
+  background-color: #7f55b1;
+  border-radius: 20px;
 }
 
 .main {
   grid-area: main;
   display: grid;
   grid-template-columns: 2fr 1fr;
-  gap: 15px;
+  gap: 25px;
   padding: 2rem;
+  background-color: #e6e6e6;
 }
 
 .container {
@@ -59,8 +107,8 @@ a {
 
 .main-left {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-  gap: 15px;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 20px;
 }
 
 .main-right {
@@ -70,10 +118,110 @@ a {
 }
 
 .article {
-  background-color: #ffe1e0;
+  background-color: #fff;
   height: 200px;
+  border-radius: 10px;
+  padding: 1rem;
+  border-left: 7px solid #f49bab;
 }
 
 .article-right {
-  background-color: #ffe1e0;
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 1rem;
+  flex-grow: 1;
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+}
+
+.profile-pic {
+  width: 60px;
+  margin-right: 1rem;
+  border-radius: 50%;
+}
+
+.greetings {
+  display: flex;
+  align-items: center;
+}
+
+.search {
+  display: flex;
+  align-items: center;
+  width: 70%;
+}
+
+.search input {
+  width: 90%;
+  background-color: #e6e6e6;
+  border: none;
+  border-radius: 20px;
+  padding: 0.5rem;
+}
+
+.profile {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.profile a i {
+  color: #000;
+  font-size: 20px;
+}
+
+.smaller {
+  width: 40px;
+}
+
+.wrap h3 {
+  margin-bottom: 0.5rem;
+}
+
+.wrap {
+  display: flex;
+  flex-direction: column;
+}
+
+.icons {
+  list-style-type: none;
+  display: flex;
+  width: 30%;
+  justify-content: space-between;
+}
+
+.save-options {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 1rem;
+}
+
+.article p {
+  margin-bottom: 1rem;
+  color: #4a4a4a;
+}
+
+.icons li a i {
+  font-size: 20px;
+  color: #000;
+}
+
+.border {
+  border-top: 1px solid #e6e6e6;
+  border-bottom: 1px solid #e6e6e6;
+}
+
+.description {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.description p {
+  color: #4a4a4a;
+}
+
+.trending-profile {
+  display: flex;
+  justify-content: flex-start;
+  padding-top: 0.5rem;
 }
